<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2008" />

    <TextView
        android:id="@+id/tvVolumeInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="20" />

    <TextView
        android:id="@+id/tvVolumeDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvVolumeInt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvVolumeInt"
        tools:text=".00001" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/label_short_quarter_1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvQ2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYear"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_short_quarter_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvQ1"
        app:layout_constraintEnd_toStartOf="@+id/tvQ3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvQ1"
        app:layout_constraintTop_toTopOf="@+id/tvQ1" />

    <TextView
        android:id="@+id/tvQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_short_quarter_3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvQ2"
        app:layout_constraintEnd_toStartOf="@+id/tvQ4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvQ2"
        app:layout_constraintTop_toTopOf="@+id/tvQ2" />

    <TextView
        android:id="@+id/tvQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/label_short_quarter_4"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvQ3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tvQ3"
        app:layout_constraintTop_toTopOf="@+id/tvQ3" />

    <ImageView
        android:id="@+id/ivDown"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/iv_dropdown_content_desc"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_trending_down" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/tvPetabytes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petabytes_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvVolumeDecimal"
        app:layout_constraintEnd_toStartOf="@+id/ivDown"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvVolumeDecimal"
        tools:text="Petabytes" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>